# jottit

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  NOTICE  Procfile  README.md  TODO  ajs_minify.py  alembic.ini  app.py  auth.py  blocked_sites.py  bugcleanup.py  createupdated.py  cssmin.py  db.py  diff.py  dispatcher.py  fly.toml  form.py  forms.py  gunicorn.conf.py  markdown.py  printsites.py  pwd-update.py  pyproject.toml  requirements.txt  sanitize.py  schema.sql  sendmail.py  unite.py  utils.py  view.py
feeds/: changes.atom  design.atom  export.atom  history.atom  page.atom  pages.atom  settings.atom
javascripts/: AJS-min.js  AJS.js  app.js  color.js  showdown.js
jottit/: __init__.py  auth.py  chrome.py  db.py  diff.py  mail.py  render.py  site_resolver.py  turnstile.py  urls.py
markdown/: markdown.php  php-markdown
migrations/: env.py  script.py.mako
scripts/: import_from_jottit_org.py  start.sh
static/: css-generated.css  edges.js
stylesheets/: edit.css  ie.css  screen.css  site.css
templates/: about.html  badrequest.html  base.html  captcha.html  change_password.html  change_public_url.html  changes.html  claim_site.html  delete_page.html  delete_site.html  deleted.html  design.html  diff.html  edit_conflict.html  edit_page.html  feedback.html  feedback_thanks.html  forgot_password.html  front.html  help.html  history.html  internalerror.html  notfound.html  recover_password.html  settings.html  signin.html  site_base.html  site_deleted.html  site_not_found.html  sites.html  view_page.html
tests/: conftest.py  test_auth.py  (+28 more)
(+63 files in other folders)
